# htmx-blog

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  compose.yaml  tailwind.config.js
db/migrations/: 20231125192750_start.sql  20231212200822_writing.sql  20240101105504_tags.sql
js/: dialog.js  postDocument.js
src/: config.rs  cv.rs  db.rs  lib.rs  main.rs  writing.rs
src/auth/: api.rs  util.rs
static/: cv.json  styles.css
tailwind_src/: input.css
templates/: adminToggle.html.tera  base_template.html.tera  cv_main.html.tera  document.html.tera  document_list.html.tera  document_list_item.html.tera  document_list_item.tera  form_input.html.tera  index.html.tera  loginPanel.html.tera  login_error.html.tera  not_found.html.tera  page_header.html.tera  tag_tab.html.tera  writing.html.tera
test_documents/: johnBuchanan.md
writing/1/: generated.html
writing/2/: blob.md  generated.html
