[package]
name = "htmx-blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
rand = "0.8.5"
serde = "1.0.188"
sha256 = "1.4.0"


[dependencies.rocket]
version = "=0.5.0-rc.3"
features = ["json", "secrets", "tls"]

[dependencies.sqlx]
version = "0.6"
default-features = false
features = ["macros", "migrate", "chrono"]

[dependencies.rocket_db_pools]
version = "=0.1.0-rc.3"
features = ["sqlx_mysql"]

[dependencies.uuid]
version = "1.6.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
