[package]
name = "htmx-blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = { version = "0.4.31", features = ["clock", "serde"] }
kuchiki = "0.8.1"
log = "0.4.22"
markdown = "1.0.0-alpha.14"
rand = "0.8.5"
serde = "1.0.188"
sha256 = "1.4.0"


[dependencies.rocket]
version = "=0.5.0-rc.3"
features = ["json", "secrets"]

[dependencies.sqlx]
version = "0.6"
default-features = false
features = ["macros", "migrate", "chrono"]

[dependencies.rocket_db_pools]
version = "=0.1.0-rc.3"
features = ["sqlx_sqlite"]

[dependencies.rocket_dyn_templates]
version = "=0.1.0-rc.3"
features = ["tera"]
